styles/form.module.css
.wrapper {
    background-color: #18122B;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    inset: 0;
}

.container { 
    padding: 3rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    gap: 2rem;
    border-radius: 10px;
    filter: drop-shadow(0 0 0.5rem #F7EFE5);
}

.container h1 {
    font-size: 2.5rem;
    margin: 0;
}

.container hr {
    width: 100%;
    margin: 0;
}

.form {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    margin: 0 8rem;
}

.form input {
    padding: .35rem;
    border-color: initial;
}

.container button {
    width: 15rem;
}

.form div {
    display: flex;
    flex-direction: column;
}

.form div span, .heroForm div span {
    color: #393053;
    font-weight: 700;
}

.container p {
    font-size: 1.2rem;
    margin: 0;
}

.container a {
    font-size: 1.2rem;
    color: #393053;
    font-weight: 800;
}

.container .fullButton {
    width: 100%;
}

.heroForm button {
    max-width: 622.5px;
    width: 100%;
}

.heroForm label {
    display: block;
    font-weight: 700;
}

.heroForm{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center; 
    gap: 1rem;
    width: 100%;
    height: 100%;
    overflow: visible;
}

.heroForm input {
    padding: 0.5rem 1rem;
    margin: 0;
    width: 100%;
}

.heroForm div {
    width: 100%;
}

.otherAuth p {
    margin: 1rem 0;
    font-size: 1.2rem;
    text-align: center;
    margin-top: 0;
}

.otherAuth {
    overflow: visible;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}

.authLogo {
    position: relative;
    aspect-ratio: 1/1;
    width: 4rem;
    cursor: pointer;
    border-radius: 5px;
}

.authOptions {
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: visible;
    gap: 1rem;
}

.heroFormWrapper .otherAuth p {
    margin-top: 1rem;
}

.resetPassword {
    margin-top: 1rem;
}

.otherAuth span {
    color: #393053;
    font-weight: 700;
    text-align: center;
}

.otherAuth p {
    font-size: 1.2rem !important;
}

.footer p    {
    font-size: 1.2rem !important;
}

